--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,29 @@ version = "0.1.0"
 doc = true
 path = "src/lib.rs"
 
+
 [dependencies]
+tokio = { version = "1.44.1", features = ["full"] }
+axum = { version = "0.8.1", features = ["tracing", "ws", "tower-log", "tokio", "json"] }
+axum-extra = { version = "0.10.0", features = ["cookie-private", "cookie", "form"] }
+axum-macros = "0.5.0"
+sqlx = { version = "0.8.3", features = ["macros", "runtime-tokio-native-tls", "sqlite", "sqlx-sqlite", "_sqlite", "sqlx-macros", "uuid"]}
+
+askama = { version = "0.12.1", features = ["serde", "with-axum"] }
+askama_axum = "0.4.0"
+axum-htmx = "0.7.0"
+
+tower = "0.5.2"
+tower-http = { version = "0.6.2", features = ["full"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["tracing", "tracing-log", "fmt"] }
+
+serde = { version = "1.0.219", features = ["derive"] }
+dotenv = "0.15.0"
+uuid = { version = "1.16.0", features = ["serde", "v4"] }
+jsonwebtoken = { version = "9.3.1", features = ["default"] }
+argon2 = { version = "0.5.3", features = ["password-hash"] }
+async-trait = "0.1.88"
+chrono = "0.4.40"
+clap = { version = "4.5.32", features = ["derive"] }
+
